--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>😶assinment 6</title>
+    <title>😶 assinment 6</title>
+    <!-- Bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- css link  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>assinment 5</h1>
+<body class="background_color">
+    <h1 class="text-center mt-5 fw-5 text-warning">
+        <span class="text-dark">P</span>hone
+        <span class="text-dark">F</span>inder
+    </h1>
+
+    <!-- search feild -->
+    <div class="input-group mb-3 mt-5 w-50 mx-auto">
+        <input id="search_feild" type="text" class="form-control" placeholder="Let's Find your phone"
+            aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary bg-dark text-warning rounded-3" type="button"
+            id="button_search">SEARCH</button>
+    </div>
+
+    <!-- Bootsstrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- script link -->
+    <script src="index.js"></script>
 </body>
 
 </html>
