--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <p id="error-message">👉🏾Something went wrong please try again!..</p>
     </div>
 
+    <div id='detail_part' class="">
+
+    </div>
+
     <!-- grid card search-result -->
     <div id="search_result" class="row row-cols-1 row-cols-lg-3 g-xl-5 w-75 mx-auto">
 
