--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- search feild -->
     <div class="input-group mb-3 mt-5 w-50 mx-auto">
-        <input id="search_feild" type="text" class="form-control" placeholder="Let's Find your phone"
+        <input id="search_feild" type="text" class="form-control " placeholder="Let's Find your phone"
             aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary bg-dark text-warning rounded-3" type="button"
             onclick="searchPhone()">SEARCH</button>
@@ -31,13 +31,13 @@
     <div>
         <p id="error-message">👉🏾Something went wrong please try again!..</p>
     </div>
-
-    <div id='detail_part' class="">
+    <!-- datail part -->
+    <div id='detail_part' class="mt-3">
 
     </div>
 
     <!-- grid card search-result -->
-    <div id="search_result" class="row row-cols-1 row-cols-lg-3 g-xl-5 w-75 mx-auto">
+    <div id="search_result" class="row row-cols-1 row-cols-lg-3 g-xl-5 w-75 mx-auto min-vh-100 mt-4">
 
     </div>
 
