--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <p id="error-message">👉🏾Something went wrong please try again!..</p>
     </div>
     <!-- datail part -->
-    <div id='detail_part' class="mt-3">
+    <div id='detail_part' class="m-5">
 
     </div>
 
     <!-- grid card search-result -->
-    <div id="search_result" class="row row-cols-1 row-cols-lg-3 g-xl-5 w-75 mx-auto min-vh-100 mt-4">
+    <div id="search_result" class="row row-cols-1 row-cols-lg-3 g-xl-5 w-75 mx-auto min-vh-100 mt-3">
 
     </div>
 
